--- a/src/main/resources/static/design.css
+++ b/src/main/resources/static/design.css
@@ -1,80 +1,85 @@
-/* Styles for the body */
-body {
-    background-color: #fff9f0; /* Diffuse green color */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh; /* Full height of the viewport */
-    margin: 0; /* Remove default margin */
-    font-family: Arial, sans-serif; /* Optional: set a font */
-    flex-direction: column; /* Arrange items vertically */
-}
+/* general theme/layout */
+    /* Styles for the body */
+    body {
+        background-color: #fff9f0; /* Diffuse green color */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh; /* Full height of the viewport */
+        margin: 0; /* Remove default margin */
+        font-family: Arial, sans-serif; /* Optional: set a font */
+        flex-direction: column; /* Arrange items vertically */
+    }
 
-/* Styles for the header text */
-h1 {
+    /* navigation bar */
+    nav {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        background-color: #656965; /* Optional: to make the background color visible */
+        padding: 10px; /* Optional: to add some spacing around the links */
+        text-align: center; /* Optional: to center the links horizontally */
+    }
+    nav a {
+        text-decoration: none;
+        color: #fff5ea;
+        padding: 150px;
+    }
 
-    font-family: "Italiana", sans-serif;
-    font-weight: 400;
-    font-style: normal;
+    /* Styles for the header text */
+    h1 {
 
-    color: #656965;
-    font-size: 50px; /* Header font size */
-    margin-bottom: 20px; /* Space between header and search bar */
-}
+        font-family: "Italiana", sans-serif;
+        font-weight: 400;
+        font-style: normal;
 
-/* Styles for the form */
-form {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+        color: #656965;
+        font-size: 50px; /* Header font size */
+        margin-bottom: 20px; /* Space between header and search bar */
+        margin-top: 500px;
+    }
 
-/* Styles for the search bar */
-input[type="text"] {
-    padding: 10px; /* Padding inside the text box */
-    font-size: 1em; /* Text size in the text box */
-    border: 2px solid #656965; /* Border color */
-    border-radius: 5px; /* Rounded corners */
-    width: 250px; /* Width of the search bar */
-    margin-right: 10px; /* Space between the search bar and button */
-}
+    /* Styles for the form */
+    form {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 
-/* Styles for the button */
-button {
-    padding: 10px 20px; /* Padding inside the button */
-    background-color: #656965; /* Slightly darker green color */
-    color: white; /* Text color inside the button */
-    border: none; /* Remove default border */
-    border-radius: 5px; /* Rounded corners */
-    cursor: pointer; /* Change cursor shape on hover */
-    font-size: 1em; /* Button text size */
-}
 
-/* Button hover effect */
-button:hover {
-    background-color: #656965; /* Darker green when hovered */
-}
+/* vareSok  */
+    /* Styles for the search bar */
+    input[type="text"] {
+        padding: 10px; /* Padding inside the text box */
+        font-size: 1em; /* Text size in the text box */
+        border: 2px solid #656965; /* Border color */
+        border-radius: 5px; /* Rounded corners */
+        width: 250px; /* Width of the search bar */
+        margin-right: 10px; /* Space between the search bar and button */
+    }
 
-nav {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color: #656965; /* Optional: to make the background color visible */
-    padding: 10px; /* Optional: to add some spacing around the links */
-    text-align: center; /* Optional: to center the links horizontally */
-}
+    /* Styles for the button */
+    button {
+        padding: 10px 20px; /* Padding inside the button */
+        background-color: #656965; /* Slightly darker green color */
+        color: white; /* Text color inside the button */
+        border: none; /* Remove default border */
+        border-radius: 5px; /* Rounded corners */
+        cursor: pointer; /* Change cursor shape on hover */
+        font-size: 1em; /* Button text size */
+    }
 
-nav a {
-    text-decoration: none;
-    color: #fff5ea;
-    padding: 150px;
+    /* Button hover effect */
+    button:hover {
+        background-color: #656965; /* Darker green when hovered */
+    }
 
-}
+
 /* kart */
-#map {
-    height: 50%;
-    width: 50%;
-    min-height: 300px;
-    min-width: 300px;
-}
+    #map {
+        height: 40%;
+        width: 40%;
+        min-height: 500px;
+        min-width: 500px;
+    }
