la til markøt på kart + header på kart siden

--- a/src/main/resources/static/design.css
+++ b/src/main/resources/static/design.css
@@ -1,5 +1,8 @@
 /* Styles for the body */
 body {
+
+    overflow: hidden; /* Dette hindrer overskytende elementer fra å vises */
+
     background-color: #fff9f0; /* Diffuse green color */
     display: flex;
     justify-content: center;
