--- a/src/main/resources/static/design.css
+++ b/src/main/resources/static/design.css
@@ -32,7 +32,14 @@
 
     /* Styles for the header text */
     h1 {
+        font-family: "Notable", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: 100px;
+        margin: 0px 10px;
+    }
 
+    h2 {
         font-family: "Italiana", sans-serif;
         font-weight: 550;
         font-style: normal;
@@ -43,115 +50,13 @@
         margin-top: 300px;
     }
 
-    h2 {
-        font-family: "nunito", sans-serif;
-        font-weight: 300;
+    h3 {
+        font-family: "Hurricane", cursive;
+        font-weight: 400;
         font-style: normal;
 
-        color: #656965;
-        font-size: 20px; /* Header font size */
+        font-size: 50px; /* Header font size */
         margin-bottom: 70px; /* Space between header and search bar */
         margin-top: 0px;
     }
-
-
-
-
-/* vareSok  */
-    /* Styles for the search bar */
-    input[type="text"] {
-        padding: 10px; /* Padding inside the text box */
-        font-size: 1em; /* Text size in the text box */
-        border: 2px solid #656965; /* Border color */
-        border-radius: 5px; /* Rounded corners */
-        width: 250px; /* Width of the search bar */
-        margin-right: 10px; /* Space between the search bar and button */
-        margin-top: 50px;
-    }
-
-    /* Styles for the button */
-    button {
-        padding: 10px 20px; /* Padding inside the button */
-        background-color: #656965; /* Slightly darker green color */
-        color: #fff9f0; /* Text color inside the button */
-        border: none; /* Remove default border */
-        border-radius: 5px; /* Rounded corners */
-        cursor: pointer; /* Change cursor shape on hover */
-        font-size: 1em; /* Button text size */
-        margin-top: 50px;
-    }
-
-    /* Button hover effect */
-    button:hover {
-        background-color: #8a8f8a;
-    }
-
-
-/* kart */
-
-    /* Styles for the form */
-    form {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-right: 50px;
-    }
-
-    input[type="checkbox"] {
-        margin-bottom: 10px;
-        margin-right: 5px;
-        margin-left: 30px;
-    }
-
-    input[type="submit"] {
-        padding: 10px 20px;
-        background-color: #656965;
-        color: white;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        margin-left: 40px;
-    }
-
-    input[type="submit"]:hover {
-        background-color: #8a8f8a; /* Slightly darker green when hovered */
-    }
-
-    /* Table styling */
-    .styled-table {
-        width: 50%;
-        margin: 20px auto;
-        border-collapse: collapse;
-        text-align: left;
-        background-color: #fff;
-        box-shadow: 0 2px 12px rgba(0, 0, 0, 0.1);
-        border-radius: 8px;
-    }
-
-    .styled-table th, .styled-table td {
-        padding: 12px 20px;
-    }
-
-    .styled-table th {
-        background-color: #656965;
-        color: white;
-    }
-
-    .styled-table tbody tr:nth-child(even) {
-        background-color: #f2f2f2;
-    }
-
-    .styled-table tbody tr:hover {
-        background-color: #ddd;
-    }
-
-
-    #map {
-        height: 40%;
-        width: 40%;
-        min-height: 500px;
-        min-width: 500px;
-    }
-
-
 
