--- a/src/main/resources/static/hjem.css
+++ b/src/main/resources/static/hjem.css
@@ -1,5 +1,5 @@
-.banner-img {
-    background-image: url("images/banner.jpg");
+.TrashTagImage {
+    background-image: url("images/TrashTagImage.png");
     min-height: 380px;
     width: 100%; /* Ensure full width */
     display: block; /* Ensures it takes up space */
@@ -75,6 +75,53 @@
     content: "";
     display: table;
     clear: both;
+}
+
+
+/*ScanBilde & knapp*/
+.scan-section {
+    text-align: center;
+    background-color: #f0f0e5;
+    padding: 40px;
+    margin: 80px auto;
+    border-radius: 20px;
+    width: 60%;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.scan-section h2 {
+    font-family: "Italiana", sans-serif;
+    font-size: 40px;
+    color: #656965;
+    margin-bottom: 10px;
+}
+
+.scan-section p {
+    font-size: 18px;
+    margin-bottom: 20px;
+    color: #656965;
+}
+
+.scan-image {
+    width: 200px;
+    height: auto;
+    margin-bottom: 25px;
+}
+
+.scan-button {
+    background-color: #656965;
+    color: white;
+    font-size: 18px;
+    font-weight: bold;
+    padding: 14px 30px;
+    border: none;
+    border-radius: 12px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.scan-button:hover {
+    background-color: #286e34;
 }
 
 
