--- a/src/main/resources/static/kart.css
+++ b/src/main/resources/static/kart.css
@@ -1,30 +1,36 @@
+/* Header */
+    .kart-header {
+        margin-top: 250px;
+    }
+
+
 /* Styles for the form */
-form {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-right: 50px;
-}
+    form {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-right: 50px;
+    }
 
-input[type="checkbox"] {
-    margin-bottom: 10px;
-    margin-right: 5px;
-    margin-left: 30px;
-}
+    input[type="checkbox"] {
+        margin-bottom: 10px;
+        margin-right: 5px;
+        margin-left: 30px;
+    }
 
-input[type="submit"] {
-    padding: 10px 20px;
-    background-color: #656965;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-left: 40px;
-}
+    input[type="submit"] {
+        padding: 10px 20px;
+        background-color: #656965;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        margin-left: 40px;
+    }
 
-input[type="submit"]:hover {
-    background-color: #8a8f8a; /* Slightly darker green when hovered */
-}
+    input[type="submit"]:hover {
+        background-color: #8a8f8a; /* Slightly darker green when hovered */
+    }
 
 /* Table styling */
 .styled-table {
