--- a/src/main/resources/static/vareSok.css
+++ b/src/main/resources/static/vareSok.css
@@ -13,7 +13,7 @@
 
     #camera-button {
         color: #1a9350;
-        background-color: #8bcba8;
+        background-color: #bee0c7;
         transition: background-color 0.3s ease;
         display: inline-block;
         cursor: pointer;
@@ -53,7 +53,7 @@
 
 /* Background colour */
     .search-section {
-        background-color: #8bcba8;
+        background-color: #bee0c7;
         display: flex;
         flex-direction: column;
         align-content: center;
@@ -61,8 +61,7 @@
         text-align: center;
         width: 100%;
         padding: 70px 0;
-        margin-top: 100px;
-
+        margin-top: 110px;
     }
 
 /* Style for button and search bar */
