--- a/src/main/resources/static/kart.css
+++ b/src/main/resources/static/kart.css
@@ -4,33 +4,76 @@
     }
 
 
-/* Styles for the form */
+/* Styles for the form and div */
     form {
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
+        gap: 20px;
         margin-right: 50px;
     }
 
+
+/* input and button in one row */
+    .search-row {
+        display: flex;
+        gap: 10px;
+    }
+
+    /* search bar */
+    input[type="text"] {
+        font-size: 1em;
+        border: 2px solid #d3c9bd;
+        border-radius: 5px;
+        width: 250px;
+        padding: 10px;
+        margin-right: 10px;
+        margin-top: 20px;
+    }
+
+    /* Button */
+    button[type="submit"] {
+        color: #1a9350;
+        background-color: #bee0c7;
+        cursor: pointer;
+        border: none;
+        border-radius: 15px;
+        font-size: 18px;
+        font-weight: bold;
+        padding: 10px 20px;
+        margin-top: 20px;
+    }
+
+    /* Button hover effect */
+    button[type="submit"]:hover {
+        color: #f3e7da;
+        background-color: #1a9350;
+    }
+
+
+/* checkboxes in one row */
+    .checkbox-row {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 20px;
+        justify-content: center;
+    }
+
+    .checkbox-row label {
+        display: flex;
+        align-items: center;
+        gap: 5px;
+    }
+
     input[type="checkbox"] {
-        margin-bottom: 10px;
         margin-right: 5px;
         margin-left: 30px;
+        margin-bottom: 10px;
     }
 
-    input[type="submit"] {
-        padding: 10px 20px;
-        background-color: #656965;
-        color: white;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        margin-left: 40px;
-    }
 
-    input[type="submit"]:hover {
-        background-color: #8a8f8a; /* Slightly darker green when hovered */
-    }
+
 
 /* Table styling */
 .styled-table {
