--- a/src/main/resources/static/vareSok.css
+++ b/src/main/resources/static/vareSok.css
@@ -87,6 +87,7 @@
         form button[type="submit"] {
             color: #f3e7da;
             background-color: #1a9350;
+            transition: background-color 0.3s ease;
             cursor: pointer;
             border: none;
             border-radius: 15px;
@@ -107,6 +108,7 @@
     .trash-buttons {
         display: flex;
         justify-content: center;
+
         gap: 15px;
         margin-top: 40px;
         margin-bottom: 100px;
@@ -115,6 +117,7 @@
     .trash-buttons button:not(#camera-button) {
         color: #f3e7da;
         background-color: #1a9350;
+        transition: background-color 0.3s ease;
         display: flex;
         justify-content: center;
         align-items: center;
